--- a/trunk/security_pardus/security/templates/advisory/advisory_details.html
+++ b/trunk/security_pardus/security/templates/advisory/advisory_details.html
@@ -19,7 +19,7 @@
     <h3>{% trans "Packages" %}</h3>
     <ul>
         {% for package in advisory.get_packages %}
-            <li>{{ package }}</li>
+            <li>{{ package.0 }}, {% blocktrans with package.1 as version %}all before {{ version }}{% endblocktrans %}</li>
         {% endfor %}
     </ul>
 
@@ -36,6 +36,7 @@
     {% for year in years %}
         | <a href="/{{ language }}/{{ year }}/">{{ year }}</a>
     {% endfor %}
+    | <a href="text/">{% trans "Printer Friendly Page" %}</a>
     {% for lang in other_languages %}
         | <a href="/{{ lang.code }}">{{ lang.name }}</a>
     {% endfor %}
